# HallThrusterPEM

./: .copier-answers.yml  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  diff.out  environment.yml  index.html  install_hallthruster.py  juliapkg.json  mcmc.sh  mkdocs.yml  objects.inv  pyproject.toml  release.py  requirements.txt  run.sh  setup_env.sh  setup_hpc.sh  sitemap.xml  todo.md  utils.py
.github/workflows/: deploy.yml  docs.yml  tests.yml
CONTRIBUTING/: index.html
assets/: hallmd_logo.pptx
cathode_coupling_model/: cathodecoupling.py  cc_input.json
changelog/: index.html
contributing/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_2dde4614707544cd___init___py.html  z_2dde4614707544cd_dataloader_py.html  z_3f7d3c3c59234e7b___init___py.html  z_488932a8634fc5f7___init___py.html  z_6f458c605d572691___init___py.html  z_8357d4dd529b8d8f___init___py.html  z_8357d4dd529b8d8f_loader_py.html  z_93721dd88f8d67ef___init___py.html  z_93721dd88f8d67ef_dataloader_py.html  z_aea740bc56595e62___init___py.html  z_aea740bc56595e62_data_py.html  z_aea740bc56595e62_utils_py.html  z_d57b44858d46f54f___init___py.html  z_d57b44858d46f54f_dataloader_py.html  z_f2b431f90554dd47___init___py.html  z_f2b431f90554dd47_cathode_py.html  z_f2b431f90554dd47_plume_py.html  z_f2b431f90554dd47_thruster_py.html  z_f62724fc606f3068___init___py.html
curr_den_model/: j_input.json  j_model.py
data/: .gitignore  SPT100_data_readme.md  cc_input.json  loader.py  plume_input.json  spt100-datasets.xlsx  spt100-datasets_MA.xlsx  thruster_input.json
data/DLC-2014/: j_SPT100_1.22e-5_torr.csv  j_SPT100_1.57e-5_torr.csv  j_SPT100_1.69e-6_torr.csv  j_SPT100_2.56e-5_torr.csv  j_SPT100_3.83e-5_torr.csv  j_SPT100_4.06e-6_torr.csv  j_SPT100_5.51e-5_torr.csv  j_SPT100_6.99e-6_torr.csv
data/MHH-2019/: LIF_SPT100_1.7e-5_torr.csv  LIF_SPT100_1.7e-5_torr_ui_Ti.csv  LIF_SPT100_3.5e-5_torr.csv  LIF_SPT100_3.5e-5_torr_ui_Ti.csv  LIF_SPT100_5e-5_torr_ui_Ti.csv  performance.json
data/ND-2002/: LIF_SPT100.csv  performance.json
data/spt100/: jion_dataset4.csv  spt100-datasets.xlsx  spt100.bib  thrust_dataset1.csv  thrust_dataset3.csv  thrust_dataset6.csv  thrust_dataset7.csv  ui_dataset5.csv  ui_dataset6.csv  vcc_dataset8.csv
devices/: .gitignore
doc/spt100/: spt100-datasets.xlsx
docs/: CONTRIBUTING.md  README.md  TODOC.md  abbreviations.md  examples.md  gen_ref_pages.py  how-to-guides.md  tutorial.md
docs/guides/: calibrate.md  model.md  surrogate.md  validate.md
docs/reference/: cathode.md  pem.md  plume.md  thruster.md  utils.md
docs/styles/: extra.css
docs/theory/: data.md  models.md  spt100.md  summary.md
examples/: index.html
guides/calibrate/: index.html
guides/data/: index.html
guides/model/: index.html
guides/surrogate/: index.html
guides/validate/: index.html
how-to-guides/: index.html
input/: .gitignore  cc_input.json  plume_input.json  system_input.json  thruster_input.json
models/: cc.py  pem.py  plume.py  simple_models.py  surrogates.py  thruster.py
models/config/: hallthruster_jl.json  variables.json
models/data/: plume_svd.pkl  test_set.pkl  thruster_svd.pkl
reference/: index.html
reference/SUMMARY/: index.html
reference/cathode/: index.html
reference/data/: index.html
reference/devices/: index.html
reference/models/: index.html
reference/overview/: index.html
reference/pem/: index.html
reference/plume/: index.html
reference/spt100/: index.html
reference/thruster/: index.html
reference/utils/: index.html
results/: .gitignore
sandbox/: cc_opt.py  debug_convergence.py  debug_plume.py  readme.md  sparse_grids.py  test_bopt.py  test_concurrent.py  test_error.py  test_graph.py  test_laplace.py  test_mpi.py  test_mpi.sh  test_results.py  test_slurm.sh  test_svd.py  test_torch.py  view_current.py  view_velocity.py
sandbox/madison/: .gitignore  hallthruster_jl.json  madison.py  madison.sh  test_set.pkl  thruster_svd.pkl
sandbox/notebook/: debug_convergence.ipynb  plot.ipynb  sobol.ipynb  svd.ipynb
scripts/: .gitignore  README.md  analyze_mcmc.py  calc_sobol_indices.py  debug.py  debug.sh  fit_surr.py  gen_data.py  gen_sobol_samples.py  install_hallthruster.py  mcmc.py  mcmc_analysis.py  mcmc_analyze.py  mcmc_mdot.py  mcmc_plotting.py  mcmc_predict.py  mcmc_run.py  mcmc_varstats.py  pemv1_make_plots.py  plot_slice.py  run_mcmc.py  setup_env.sh  setup_hpc.sh  slice_hpc.sh  train.sh  train_hpc.sh  train_local.sh
scripts/analysis/: .gitignore  mcmc.py  mle.py  monte_carlo.py  sobol.py
scripts/debug/: fit_surr.py  fit_surr.sh  gen_data.py  gen_data.sh  plot_slice.py  plot_slice.sh
scripts/pem_mcmc/: __init__.py  analysis.py  io.py  metrics.py  options.py  samplers.py  types.py
scripts/pem_test/: pem_test.yml  train-shim.sh
scripts/pem_v0/: analysis.sh  fit_surr.py  fit_surr.sh  fit_surr_cont.sh  gen_data.py  gen_data.sh  mcmc.py  mcmc.sh  monte_carlo.py  monte_carlo.sh  paper_data.py  pem_v0_SPT-100.yml  plot_slice.py  plot_slice.sh  sobol.py  surr_gen_data.py  surrogates.ipynb  train-shim.sh
scripts/pem_v1/: .gitignore  cov.csv  cov_small.csv  fit_surr.py  fit_surr.sh  gen_data.py  gen_data.sh  map.csv  map_small.csv  mcmc.sh  monte_carlo.sh  paper_plots.py  pem_v1_SPT-100.yml  plot_slice.sh  surr_gen_data.py  train-shim.sh
search/: search_index.json
src/hallmd/: __init__.py  data.py  juliapkg.json  utils.py
start/: index.html
surrogates/: build_surr.py  build_surr.sh  polynomial.py  sparse_grids.py  surr_debug.py  surr_debug.sh  system.py  test_set.pkl
test/: .gitignore  build_surr.sh  readme.md  run_test.sh  test_error.py  test_mc.py  test_mle.py  test_pem.py  test_results.py  test_surr.py  test_thruster_output.py  test_thruster_plume.py  view_current.py
tests/: .gitignore  __init__.py  sim_hallthruster.jl  test_cathode.py  test_data.py  test_models.py  test_plume.py  test_thruster.py  test_utils.py
theory/: index.html
theory/summary/: index.html
tutorial/: index.html
tutorials/: index.html
uq/: forward.py  mcmc.py
(+167 files in other folders)
