[project]
name = "hallmd"
version = "0.2.0"
description = "Prototype of a multidisciplinary predictive engineering model (PEM) for a Hall thruster."
authors = [
    {name = "Joshua Eckels", email = "eckelsjd@umich.edu"},
    {name = "Madison Allen", email = "mgallen@umich.edu"},
    {name = "Thomas Marks", email = "marksta@umich.edu"},
    {name = "Declan Brick", email = "brickd@umich.edu"},
    {name = "Alex Gorodetsky", email = "goroda@umich.edu"},
    {name = "Benjamin Jorns", email = "bjorns@umich.edu"}
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "amisc>=0.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}
keywords = ["multidisciplinary", "Hall thruster model", "facility effects", "anomalous transport"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
mpi = ["mpi4py>=3.1"]
scripts = [
    "uqtils>=0.4.2",
    "h5py>=3.10.0",
    "matplotlib>=3.9",
]

[project.urls]
Repository = "https://github.com/JANUS-Institute/HallThrusterPEM.git"
Documentation = "https://JANUS-Institute.github.io/HallThrusterPEM/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.install]
cache = true

[tool.ruff.lint]
select = ['E', 'F', 'I']
ignore = ['E731']  # allow lambda definitions

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.commitizen]
version_scheme = "pep440"
version_provider = "pep621"
version_files = ["src/hallmd/__init__.py:__version__"]
update_changelog_on_bump = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
major_version_zero = true
annotated_tag = true
post_bump_hooks = ["git push --follow-tags"]
changelog_start_rev = "v0.2.0"

[tool.pdm.scripts]
bump = "cz bump {args}"
test = "pytest --cov=hallmd --cov-report html:htmlcov tests"
docs = "mkdocs serve"
lint = "ruff check src tests {args}"
run_job = {shell = "sbatch --account=${SLURM_ACCOUNT} --mail-user=${SLURM_MAIL} --mail-type=ALL {args}", help = "Usage: pdm run_job <script.sh>"}

[dependency-groups]
editable = [
    "-e file:///${PROJECT_ROOT}/../amisc#egg=amisc",
]
dev = [
    "copier>=9.3",
    "copier-templates-extensions>=0.3",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "commitizen>=3.29",
    "nbstripout>=0.7.1",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
doc = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "markdown-exec[ansi]>=1.9",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-redirects>=1.2",
    "mkdocs-git-committers-plugin-2>=2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-coverage>=1.0",
]
